Bug 242693 - Smarter handling (even just a parsing error!) of semicolon-separated addresses in To: field; comment 28. r=Standard8 sr=bienvenu.